# r-os

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  bootstrap.js  docker-compose.yml  index.html
.github/workflows/: ci.yml
pkg/: LICENSE-APACHE  README.md  package.json  r_os.d.ts  r_os.js  r_os_bg.wasm  r_os_bg.wasm.d.ts
src/: kernel.rs  lib.rs  process.rs
src/core/: demo.rs  mod.rs  time.rs
src/core/shell/: mod.rs
src/core/shell/command/: cd.rs  exists.rs  ls.rs  mkdir.rs  mod.rs  time.rs  top.rs
src/kernel/: defaults.rs  errors.rs  mod.rs
src/vfs/: entry.rs  errors.rs  fs.rs  mod.rs  storage.rs
static/: bootstrap.js  index.html
