[package]
name = "r_os"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window", "Document", "Element", "HtmlElement", "console", "HtmlTextAreaElement"
]}
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = "0.1.7"

idb = "0.6.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures= "0.4.51"

[features]
default = ["wee_alloc"]
