[package]
name = "r_os"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Ricciardi"]
license-file = "LICENSE-APACHE"
description = "An operating system written in Rust for the browser"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.101"
js-sys = "0.3.78"
web-sys = { version = "0.3.78", features = [
  "Window", "Document", "Element", "HtmlElement", "console", "HtmlTextAreaElement"
]}
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = "0.1.7"

idb = "0.6.4"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
wasm-bindgen-futures= "0.4.51"
regex = "1.11.2"
serde-wasm-bindgen = "0.6.5"

[features]
default = ["wee_alloc"]
