[package]
name = "r_os"
version = "0.1.3"
edition = "2024"
authors = ["Antonio Ricciardi"]
license-file = "LICENSE-APACHE"
description = "An operating system written in Rust for the browser"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.103"
js-sys = "0.3.80"
web-sys = { version = "0.3.80", features = [
  "Window", "Document", "Element", "HtmlElement", "console", "HtmlTextAreaElement"
]}
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = "0.1.7"

idb = "0.6.4"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen-futures= "0.4.51"
regex = "1.11.2"
serde-wasm-bindgen = "0.6.5"
chrono = "0.4.42"
futures = "0.3.31"
clap = { version = "4.5.47", features = ["derive"] }
async-std = "1.13.2"

[features]
default = ["wee_alloc"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  '-O4',
  "--flexible-inline-max-function-size",
  "4294967295",
]